<resources>
    <string name="app_name">WatchByWebView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_resource">احدث المصادر</string>
    <string name="favorite_resource">المصادر المفضلة</string>
    <string name="search_for_resource">ابحث عن مصدر</string>
    <string name="App_Name">اسم التطبيق</string>
    <string name="Slang">اقتباس تحت اسم التطبيق</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="favorite">المفضلة</string>
    <string name="home">الرئسية</string>
    <string name="darkMode">الوضع المظلم</string>
    <string name="otherApps">تطبيقات اخرى</string>
    <string name="contactUs">تواصل معنا</string>
    <string name="shareTheApp">شارك التطبيق</string>
    <string name="appPages">صفحات التطبيق</string>
    <string name="controlButtons">ازرار التحكم</string>
    <string name="SearchResult">نتائج البحث</string>
    <string name="modeValue">MODE_VALUE</string>
    <string name="pressTwiceToExit">اضغط مرتين للخروج من التطبيق</string>
    <string name="checkInternetConnection">المرجو تفقد اتصالك بالانترنت</string>
    <string name="reConnection">اعادة الاتصال</string>
    <string name="pleaseReCheck"> المرجو اعادة المحاولة، اتصال الانترنت غير موجود</string>
</resources>